src/eclipse-workspace/Sample/src/orhn/App.java
/*
 * ++ ve -- operatörlerinin operandlarının değişken olması gerekir. Aksi durumda error oluşur.
 * 
 */
package orhn;

public class App {
	public static void main(String [] args)
	{
		int a;
		
		a = --2;//error
		
		
	}
}